Fix spacing around links tag

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   height: 100%;
   overflow: hidden;
 }
+.App-body {
+  overflow-y: scroll;
+  height: 100%;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 .intro {
   color: rgba(255, 255, 255, 0.849);
   text-align: center;
@@ -165,7 +171,7 @@ ul.icons li a:before {
   color: white;
   border-radius: 100%;
   text-align: center;
-  @media screen (width > '') {
+  @media screen (width > "") {
   }
 }
 
